# glassplitter

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tag.yml
src/glassplitter/: __init__.py  tokenizer.py
test/: test_splitting.py
